# ei-fragment-calculator

./: .gitignore  BUG_FIXES_PHASE1.md  CEF_VIEWER_DOCUMENTATION.md  CEF_VIEWER_QUICK_REFERENCE.md  CEF_VIEWER_README.md  CHANGES_BEFORE_AFTER.md  COMPLETE_WORKFLOW_PIPELINE.md  DATABASE_GUIDE.md  DEPLOYMENT_CHECKLIST_1.9.0.md  FREEZE_FIX_EXPLANATION.md  IMPLEMENTATION_SUMMARY_PHASES_1-3.md  INLINE_EDITING_GUIDE.md  INSTALL.md  INTEGRATION_GUIDE.md  METADATA_ENRICHMENT_FEATURE.md  NIST_ALGORITHM_GAPS.md  PHASE1_2_COMPLETION_SUMMARY.md  PHASE6_IMPLEMENTATION.md  PROJECT_REFERENCE.md  README.md  README_INLINE_EDITING.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_1.9.0.md  RELEASE_NOTES_1.9.2.md  TESTING_CHECKLIST.md  TESTING_PHASE1_BUGS.md  VERSION_1.9.0_COMPLETE.md  build_installer.bat  build_windows.bat  build_windows.spec  check_syntax.py  check_writer.py  compare_accuracy.py  ei_fragment_gui.spec  install.bat  installer.iss  launch_gui.py  pyproject.toml  run_baseline.bat  run_baseline.py  (+26 more)
Spectra/: Caffeine.sdf  Cyfluthrin.sdf  compounds.SDF
data/: elements.csv
docs/: EI_Fragment_Calculator_Algorithms.pptx  NEW_FEATURES_SPECTRUM_ANALYZER.md  SPECTRUM_ANALYZER.md  SPECTRUM_ANALYZER_QUICKSTART.md  ei_fragment_workflow.pptx
ei_fragment_calculator/: __init__.py  bond_thermochemistry.py  calculator.py  cef_db.py  cef_matcher.py  cef_parser.py  cef_viewer_tab.py  cef_visualizer.py  cli.py  confidence.py  constants.py  enrich.py  enrich_cli.py  filters.py  formula.py  formula_calculator.py  fragmentation_rules.py  gui.py  input_reader.py  isotope.py  mol_merger.py  mol_parser.py  neutral_losses.py  nist_lookup.py  preflight.py  sdbs_lookup.py  sdf_parser.py  sdf_writer.py  spectrum_analyzer.py  stable_ions.py  structure_fetcher.py
ei_fragment_calculator/importers/: jdx_parser.py  mspec_parser.py
examples/: error_cases.sdf  example.sdf  three_compounds.msp  three_compounds.sdf  two_compounds.csv  two_compounds.jdx  two_compounds_flat.csv
scripts/: check_requirements.py  generate_workflow_image.py
tests/: test_calculator.py  test_confidence.py  test_filters.py  test_formula.py  test_fragmentation_rules.py  test_input_reader.py  test_isotope.py  test_nist_sdbs_lookup.py  test_sdf_parser.py
