[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ei-fragment-calculator"
version = "1.9.0"
description = "Calculate possible exact masses for peaks in EI mass spectra using the molecular formula as an elemental upper bound."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []   # pure standard-library - no third-party dependencies

[project.scripts]
ei-fragment-calc = "ei_fragment_calculator.cli:main"
ei-fragment-gui  = "ei_fragment_calculator.gui:main"
ei-enrich-sdf    = "ei_fragment_calculator.enrich_cli:main"

[project.optional-dependencies]
dev     = ["pytest>=7.0", "pytest-cov"]
enrich  = ["sdf-enricher"]
splash  = ["splashpy"]
viz     = ["matplotlib"]
chem    = ["rdkit-pypi"]
all     = ["sdf-enricher", "splashpy", "matplotlib", "rdkit-pypi"]

[tool.setuptools.packages.find]
include = ["ei_fragment_calculator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
